# zora

./: .gitignore  .travis.yml  HLib.cabal  LICENSE  README.md  Zora.cabal  cabal.sandbox.config  docgen.sh  hlib.hs
HLib/: List.hs  Math.hs  TreeGraphing.hs  Tuple.hs  Types.hs
Supporting Files/: dot.hs
Tests/: test-zora.hs
Zora/: List.hs  Math.hs  TreeGraphing.hs  Types.hs  main.hs
Zora/Graphing/: DAGGraphing.hs  TreeGraphing.hs  ttrie.hs  ttrie_setup.hs
supporting-files/: dot.hs
