Name:		   HLib
Version:	   1.1.3
Synopsis:      A library of data structures and assorted useful functions.
Description:   A library of data structures and assorted useful functions.
Category:      Library, Data Structures
Cabal-Version: >= 1.6
License:	   BSD3
License-File:  LICENSE
Author:		Brett Wines
Maintainer: bgwines@cs.stanford.edu
Homepage:	https://github.com/bgwines/hlib
Build-Type: Simple
Extra-Source-Files: dot.hs
Source-Repository head
    type:     git
    location: https://github.com/bgwines/hlib


Library
  Build-Depends: base >= 4 && < 5, random, containers, bytestring, text
  Exposed-Modules:
    HLib.List
    HLib.Math
    HLib.Tuple
    HLib.Types
    HLib.TreeGraphing